Fix: dongling comma and "delete" object properties caused problems in IE and Safari.
Fix: a stand-alone TabPanel would not render the active item.
New: BasicApp: masquerading as "World". In this mode all the "touched" persistent preferences will be overwritten for all roles and users.
Impr: configuration panel's header now shows the underlying model's name for convenience.

v0.5.0
2009-09-06
Major refactoring and code reorganization.
Compatibility with netzke-core v0.4.0.
New: GridPanel now supports adding/editing records in a form and extended configurable search.
New: GridPanel now can be loaded along with initial data (saves a request to the server).
New: context menu in GridPanel
New: "scopes" configuration option added to GridPanel to specify the searchlogic-compatible scope for the data.
New: "strong_default_attrs" config option added to GridPanel to specify the attributes that will be assigned to each record that is created or modified by the grid.
Usability: GridPanel's actions now get enabled/disabled according to the current selection.
Configuration panel for grids and forms now works more consistently.
New: some smart defaults for column/fields in Grid/FormPanel.
New: BasicApp supports masquerading and application-wide AJAX activity indicator.

v0.4.2
2009-05-07
Fix: afterlayout event bind removed completely because of some tricky inconsistent behavior of Ext. BasicApp initializing code put directly into js_after_constructor.

v0.4.1
2009-05-07
Fix: afterlayout call moved to js_after_constructor in BasicApp
Fix: cleaner persistent_config handling
New: default's configuration enabled for FormPanel on class-level
Fix: differently configured forms on the same page were showing the same columns
Fix: TableEditor was showing config-tool by default (must be hidden)

v0.4.0
2009-05-07
Refactor: got rid of NetzkeFormPanelField and NetzkeGridPanelColumn classes along with their tables. The layout is now stored in netzke_preferences.